<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewActiveTrainingPlan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <TextView
        android:id="@+id/textViewMenuOptionsRecycler"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="&#8942;"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTrainingPlanNameRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_colon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTrainingPlanGameRecycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTrainingPlanDescriptionRecycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/game"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>